--- a/app/src/main/res/layout/forecast_items.xml
+++ b/app/src/main/res/layout/forecast_items.xml
@@ -90,7 +90,7 @@
             app:layout_constraintStart_toEndOf="@+id/forecast_city"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+       <!-- <ImageView
             android:id="@+id/weather_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -100,16 +100,17 @@
             android:src="@mipmap/ic_launcher_round"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/forecast_datetime" />
-
+-->
         <TextView
             android:id="@+id/weather_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="88dp"
+            android:layout_marginEnd="84dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/weather_desc_example"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/weather_icon" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+        <!--app:layout_constraintTop_toTopOf="@+id/weather_icon" /> -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
