--- a/app/src/main/res/layout/forecast_items.xml
+++ b/app/src/main/res/layout/forecast_items.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -34,7 +34,7 @@
             android:layout_marginTop="20dp"
             android:padding="5dp"
             android:text="@string/example_temp"
-            android:textSize="30sp"
+            android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,9 +49,10 @@
             android:layout_marginEnd="260dp"
             android:layout_marginBottom="11dp"
             android:text="@string/maxtemp_example"
-            android:textSize="15sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/forecast_mintemp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/forecast_temp"
             app:layout_constraintTop_toBottomOf="@+id/forecast_city"
             app:layout_constraintVertical_bias="0.0" />
@@ -63,7 +64,7 @@
             android:layout_marginStart="3dp"
             android:layout_marginBottom="4dp"
             android:text="@string/mintemp_example"
-            android:textSize="15sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/forecast_feelstemp"
             app:layout_constraintStart_toEndOf="@+id/forecast_temp" />
 
@@ -83,14 +84,15 @@
             android:id="@+id/forecast_datetime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="@string/date_example"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.459"
+            app:layout_constraintHorizontal_bias="0.438"
             app:layout_constraintStart_toEndOf="@+id/forecast_city"
             app:layout_constraintTop_toTopOf="parent" />
 
-       <!-- <ImageView
+        <ImageView
             android:id="@+id/weather_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -98,19 +100,19 @@
             android:layout_marginEnd="80dp"
             android:contentDescription="@string/weather_icon"
             android:src="@mipmap/ic_launcher_round"
+            app:layout_constraintBottom_toTopOf="@+id/weather_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/forecast_datetime" />
--->
+
         <TextView
             android:id="@+id/weather_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="84dp"
+            android:layout_marginEnd="88dp"
             android:layout_marginBottom="16dp"
             android:text="@string/weather_desc_example"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-        <!--app:layout_constraintTop_toTopOf="@+id/weather_icon" /> -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
