--- a/app/src/main/res/layout/forecast_items.xml
+++ b/app/src/main/res/layout/forecast_items.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardElevation="5dp"
     app:cardCornerRadius="25dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,24 +21,22 @@
             android:layout_margin="5dp"
             android:text="@string/example_city"
             android:textSize="25sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.067"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.043" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/forecast_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:layout_marginTop="20dp"
             android:padding="5dp"
             android:text="@string/example_temp"
             android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/forecast_feelstemp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.049"
+            app:layout_constraintHorizontal_bias="0.048"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/forecast_city" />
 
@@ -47,26 +47,23 @@
             android:layout_marginStart="3dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="260dp"
-            android:layout_marginBottom="11dp"
             android:text="@string/maxtemp_example"
             android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@+id/forecast_mintemp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/forecast_temp"
-            app:layout_constraintTop_toBottomOf="@+id/forecast_city"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/forecast_city" />
 
         <TextView
             android:id="@+id/forecast_mintemp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="4dp"
             android:text="@string/mintemp_example"
             android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@+id/forecast_feelstemp"
-            app:layout_constraintStart_toEndOf="@+id/forecast_temp" />
+            app:layout_constraintStart_toEndOf="@+id/forecast_temp"
+            app:layout_constraintTop_toBottomOf="@+id/forecast_maxtemp" />
 
         <TextView
             android:id="@+id/forecast_feelstemp"
@@ -76,9 +73,7 @@
             android:text="@string/feelstemp_example"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/forecast_temp"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/forecast_datetime"
@@ -94,24 +89,49 @@
 
         <ImageView
             android:id="@+id/weather_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="80dp"
+            android:layout_width="56dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="92dp"
             android:contentDescription="@string/weather_icon"
-            app:layout_constraintBottom_toTopOf="@+id/weather_description"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/forecast_datetime" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/weather_description"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="88dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="4dp"
             android:text="@string/weather_desc_example"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/weather_icon"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/high"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/forecast_maxtemp"
+            app:layout_constraintTop_toBottomOf="@+id/forecast_city" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/low"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/forecast_mintemp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
