--- a/app/src/main/res/layout/fragment_city_forecast.xml
+++ b/app/src/main/res/layout/fragment_city_forecast.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CityForecast">
+    tools:context=".ui.CityForecastFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/forecast_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+    </androidx.recyclerview.widget.RecyclerView>
 </FrameLayout>
