--- a/app/src/main/res/layout/forecast_items.xml
+++ b/app/src/main/res/layout/forecast_items.xml
@@ -70,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/feelstemp_example"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -79,11 +80,11 @@
             android:id="@+id/forecast_datetime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:text="@string/date_example"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.438"
+            app:layout_constraintHorizontal_bias="0.579"
             app:layout_constraintStart_toEndOf="@+id/forecast_city"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -92,7 +93,7 @@
             android:layout_width="56dp"
             android:layout_height="49dp"
             android:layout_marginTop="40dp"
-            android:layout_marginEnd="92dp"
+            android:layout_marginEnd="100dp"
             android:contentDescription="@string/weather_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
